--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,31 @@
     <title>Contact</title>
   </head>
   <body>
+    <p><a href="index.html"><strong>retour à l'accueil</strong></a></p>
     <h1>Mes coordonnées</h1>
-    <p><strong>Sivère MAST</strong> - <em>1, square Georges Bernanos - Bâtiment Picardie - Appt 41</em> - <strong>60600 Clermont de l'Oise</strong></p>
-    <p>0660382103</p>
-    <p>creafik@gmail.com</p>
+    <table>
+      <tr>
+        <td>
+          <p><strong>Sivère MAST</strong> - <em>1, square Georges Bernanos - Bâtiment Picardie - Appt 41</em> - <strong>60600 Clermont de l'Oise</strong></p>
+          <p>0660382103</p>
+          <p>creafik@gmail.com</p>
+        </td>
+          <td>
+            <form class="" action="mailto:crefik@gmail.com" method="post">
+              <label>Votre nom : </label>
+              <input type="text" name="votre mom" type="text" value="">
+              <br>
+              <label>Votre email : </label>
+              <input type="email" name="votre email" value="">
+              <br>
+              <hr>
+              <label>Votre message : </label>
+              <textarea name="votre message" rows="10" cols="50"></textarea>
+              <hr>
+              <input type="submit" name="">
+            </form>
+          </td>
+      </tr>
+    </table>
   </body>
 </html>
