--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <title>Site Silvère MAST</title>
   </head>
   <body>
-    <img src="logo.png" alt="Logo de Silvère MAST">
-    <h1>Site de Silvère MAST</h1>
-    <p>est un <em>créateur digital depuis <strong>1999</strong></em></p>
-    <p>Il propose ses services en <strong>infographie, développement de sites internet</strong>, et très récemment, en <strong>Motion Design</strong></p>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="logo.png" alt="Logo de Silvère MAST"></td>
+        <td>
+          <h1>Site de Silvère MAST</h1>
+          <p>est un <em>créateur digital depuis <strong>1999</strong></em></p>
+          <p>Il propose ses services en <strong>infographie, développement de sites internet</strong>, et très récemment, en <strong>Motion Design</strong></p></td>
+      </tr>
+    </table>
     <hr>
     <h3><a href="references.html">Quelques références<a></h3>
-
+    <hr>
     <h3>Logiciels utilisés</h3>
     <ol>
       <li>Photoshop</li>
@@ -20,6 +25,20 @@
       <li>After Effects</li>
       <li>Dreamweaver</li>
     </ol>
+    <hr>
+    <h3>Langages</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>HTML</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr><tr>
+        <td>CSS</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr><tr>
+        <td>Javascript</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+    </table>
     <a href="contact.html"><strong>Contact</strong></a>
   </body>
 </html>
